==> ohyunsik-cmd/BMS/BMS_extra_file/sluc701/MSP430_I2C/main_MSP430FR2355_I2C.c <==
#include <msp430.h>
#include <stdio.h>
#include <stdint.h>
#include <stdbool.h>
#include <Include/HAL.h>
#include <Include/QmathLib.h>
#include <Include/callbacks_mpack.h>
#include "BQ769x2Header.h"
#define DEV_ADDR  0x08  // BQ769x2 address is 0x10 including R/W bit or 0x8 as 7-bit address
#define CRC_Mode 0  // 0 for disabled, 1 for enabled
#define MAX_BUFFER_SIZE         10
#define R 0 //Read
#define W 1 //Write
#define W2 2 //write data with two bytes

void delayUS(uint16_t us) {   // Sets the delay in microseconds.
    uint16_t ms;
    char i;
    ms = us / 1000;
    for(i=0; i< ms; i++)
        __delay_cycles(16000);
}

I2C_Mode I2C_ReadReg(uint8_t reg_addr, uint8_t *reg_data, uint8_t count)
{
    /* Initialize state machine */
    MasterMode = TX_REG_ADDRESS_MODE;
    TransmitRegAddr = reg_addr;
    RXByteCtr = count;
    TXByteCtr = 0;
    ReceiveIndex = 0;
    TransmitIndex = 0;

    /* Initialize device address and interrupts */
    UCB1I2CSA = DEV_ADDR;
    UCB1IFG &= ~(UCTXIFG + UCRXIFG);        // Clear any pending interrupts
    UCB1IE &= ~UCRXIE;                      // Disable RX interrupt
    UCB1IE |= UCTXIE;                       // Enable TX interrupt
    UCB1CTLW0 |= UCTR + UCTXSTT;            // I2C TX, start condition
    __bis_SR_register(LPM0_bits + GIE);     // Enter LPM0 w/ interrupts
    //For debugger
    __no_operation();

    /* Copy over received data */
    CopyArray(ReceiveBuffer, reg_data, count);

    return MasterMode;
}

I2C_Mode I2C_WriteReg(uint8_t reg_addr, uint8_t *reg_data, uint8_t count)
{
    /* Initialize state machine */
    MasterMode = TX_REG_ADDRESS_MODE;
    TransmitRegAddr = reg_addr;

    /* Copy register data to TransmitBuffer */
    CopyArray(reg_data, TransmitBuffer, count);

    TXByteCtr = count;
    RXByteCtr = 0;
    ReceiveIndex = 0;
    TransmitIndex = 0;

    /* Initialize device address and interrupts */
    UCB1I2CSA = DEV_ADDR;
    UCB1IFG &= ~(UCTXIFG + UCRXIFG);        // Clear any pending interrupts
    UCB1IE &= ~UCRXIE;                      // Disable RX interrupt
    UCB1IE |= UCTXIE;                       // Enable TX interrupt
    UCB1CTLW0 |= UCTR + UCTXSTT;            // I2C TX, start condition
    __bis_SR_register(LPM0_bits + GIE);     // Enter LPM0 w/ interrupts
    //For debugger
    __no_operation();

    return MasterMode;
}

void BQ769x2_BOTHOFF () {
    // Disables all FETs using the DFETOFF (BOTHOFF) pin
    // The DFETOFF pin on the BQ76952EVM should be connected to the MCU board to use this function
    P4OUT |= BIT2;              // DFETOFF pin (BOTHOFF) set high
}

void BQ769x2_RESET_BOTHOFF () {
    // Resets DFETOFF (BOTHOFF) pin
    // The DFETOFF pin on the BQ76952EVM should be connected to the MCU board to use this function
    P4OUT &= ~BIT2;             // DFETOFF pin (BOTHOFF) set low
}

void BQ769x2_ShutdownPin() {
    // Puts the device into SHUTDOWN mode using the RST_SHUT pin
    // The RST_SHUT pin on the BQ76952EVM should be connected to the MCU board to use this function
    P2OUT |= BIT3;              // Set RST_SHUT pin
}

void BQ769x2_ReleaseShutdownPin() {
    // Releases the RST_SHUT pin
    // The RST_SHUT pin on the BQ76952EVM should be connected to the MCU board to use this function
    P2OUT &= ~BIT3;             // Reset RST_SHUT pin
}

int main(void)
{
    // Stop watchdog timer
    WDTCTL = WDTPW | WDTHOLD;

    // Initialize GPIOs, clocks and peripherals
    GPIO_initPins();
    UCS_initModule();
    I2C_initModule();

    CommandSubcommands(BQ769x2_RESET);  // Resets the BQ769x2 registers
    delayUS(60000);
    BQ769x2_Init();  // Configure all of the BQ769x2 register settings
    delayUS(10000);
    CommandSubcommands(FET_ENABLE); // Enable the CHG and DSG FETs
    delayUS(10000);
    CommandSubcommands(SLEEP_DISABLE); // Sleep mode is enabled by default. For this example, Sleep is disabled to
                                       // demonstrate full-speed measurements in Normal mode.

    delayUS(60000); delayUS(60000); delayUS(60000); delayUS(60000);  //wait to start measurements after FETs close


  /* Infinite loop */
  /* USER CODE BEGIN WHILE */
  while (1)
  {
    /* USER CODE END WHILE */

    /* USER CODE BEGIN 3 */

    //Reads Cell, Stack, Pack, LD Voltages, Pack Current and TS1/TS3 Temperatures in a loop
    //This basic example polls the Alarm Status register to see if protections have triggered or new measurements are ready
    //The ALERT pin can also be used as an interrupt to the microcontroller for fastest response time instead of polling
    //In this example the LED on the microcontroller board will be turned on to indicate a protection has triggered and will
    //be turned off if the protection condition has cleared.

        AlarmBits = BQ769x2_ReadAlarmStatus();
        if (AlarmBits & 0x80) {  // Check if FULLSCAN is complete. If set, new measurements are available
            BQ769x2_ReadAllVoltages();
            Pack_Current = BQ769x2_ReadCurrent();
            Temperature[0] = BQ769x2_ReadTemperature(TS1Temperature);
            Temperature[1] = BQ769x2_ReadTemperature(TS3Temperature);
            DirectCommands(AlarmStatus, 0x0080, W);  // Clear the FULLSCAN bit
        }

        if (AlarmBits & 0xC000) {  // If Safety Status bits are showing in AlarmStatus register
            BQ769x2_ReadSafetyStatus(); // Read the Safety Status registers to find which protections have triggered
            if (ProtectionsTriggered & 1) {
                P1OUT |= BIT0;             } // Turn on the LED to indicate Protection has triggered
                DirectCommands(AlarmStatus, 0xF800, W); // Clear the Safety Status Alarm bits.
            }
        else
        {
            if (ProtectionsTriggered & 1) {
                BQ769x2_ReadSafetyStatus();
                if (!(ProtectionsTriggered & 1))
                {
                    P1OUT &= ~BIT0;
                }
            } // Turn off the LED if Safety Status has cleared which means the protection condition is no longer present
        }
        delayUS(20000);  // repeat loop every 20 ms
  }
}
